==================================
Rilascio 1.70.02    del 01/07/2015
==================================

Filibuster - migliorata la gestione delle pagine:
1. ci si può muovere liberamente tra le cartelle con il documento non salvato fino a quando non si va in selezione;
2. aggiunto l'URL per le miniature.

==================================
Rilascio 1.70.01    del 21/06/2015
==================================

Setup Ego: ordinate per descrizione le liste.

Filibuster: corretto il reperimento dei contenuti da Wikipedia.

Filibuster: aggiunto il titolo al marquee.

==================================
Rilascio 1.70.00    del 08/06/2015
==================================

Implementata la versione Javascript dell'Algoritmo Zero.

==================================
Rilascio 1.69.32    del 31/05/2015
==================================

RYWINZ: gestito il nuovo flag RYWINZ.MDI() e utilizzato in ryTabs.

Forum: corretta anomalia al logout in caso di modifiche non salvate.

==================================
Rilascio 1.69.31    del 30/05/2015
==================================

Tolte le informazioni esplicite sul copyright dalle applicazioni Cambusa e arricchiti i metadati.

Filibuster: gestita la policy sui cookie.

==================================
Rilascio 1.69.30    del 23/05/2015
==================================

ryHelper: utilizzato l'elemento "input" per il fuoco.

ryButton: utilizzato l'elemento "input" per il fuoco.

==================================
Rilascio 1.69.29    del 20/05/2015
==================================

Quiver: introdotta una variabile globale che esprime lo spacename dell'istruzione corrente.

RYJAX: migliorata la "getnodes" (analizza l'intero albero).

==================================
Rilascio 1.69.28    del 18/05/2015
==================================

Generalizzata la chiamata a "quiver_execute".

==================================
Rilascio 1.69.27    del 16/05/2015
==================================
