@@ -29,12 +29,13 @@ else{
 ?><!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
+<meta charset="utf-8" />
 <meta http-equiv="x-ua-compatible" content="ie=EmulateIE9, chrome=1" />
-<meta name="description" content="ryPulse - Scheduling Management">
-<meta name="framework" content="Cambusa <?php print $cambusa_version ?>">
-<meta name="license" content="GNU LGPL v3">
-<meta name="repository" content="https://github.com/cambusa/">
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="description" content="ryPulse - Scheduling Management" />
+<meta name="framework" content="Cambusa <?php print $cambusa_version ?>" />
+<meta name="license" content="GNU LGPL v3" />
+<meta name="repository" content="https://github.com/cambusa/" />
 <title>Pulse - Gestore di azioni schedulate</title>
 
 <style>
