@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=EmulateIE9, chrome=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Algoritmo Zero</title>
 </head>
 
